<resources>
    <string name="app_name">BookLover</string>
    <string name="open_menu">Open</string>
    <string name="close_menu">Close</string>
    <string name="password">Password</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="create_an_account">Create an account</string>
    <string name="login_into_your_account">Login into your account</string>
    <string name="login">Login</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="register_now">Register now</string>
    <string name="phone_number">Phone number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="number_of_pages">Number of pages</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="language">Language</string>
    <string name="publication_year">Publication year</string>
    <string name="add_book">Add book</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="comment">Comment</string>
    <string name="review">Review</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="test">test</string>
    <string name="animate">Animate</string>
    <string name="welcome_to_booklover">Welcome to BookLover</string>
    <string name="what_did_you_read_lately">What did you read lately?</string>
</resources>