<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/login_into_your_account"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:hint="@string/email"
        android:maxLines="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:textSize="20sp"
        android:paddingEnd="0dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:hint="@string/password"
        android:maxLines="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:textSize="20sp"
        android:paddingEnd="0dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/don_t_you_have_an_account"/>
        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/registerNowBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>