<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/purple_200"
            android:padding="20dp">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_person_24"
            android:layout_centerVertical="true"
            />

            <TextView
                android:id="@+id/full_name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dobre Adriana"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:textSize="25dp"
                android:layout_toEndOf="@id/image_profile"
                />

            <TextView
                android:id="@+id/email_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/full_name_profile"
                android:text="Dobre Adriana"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:layout_toEndOf="@id/image_profile"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#86BB86FC"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingTop="15sp"
                    android:paddingBottom="0dp"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="23sp"
                    android:text="test"
                    android:background="@android:color/transparent"
                    android:paddingTop="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp"
                    android:layout_marginTop="0dp"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="10dp"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#86BB86FC"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingTop="15sp"
                    android:paddingBottom="0dp"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="23sp"
                    android:text="test"
                    android:background="@android:color/transparent"
                    android:paddingTop="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp"
                    android:layout_marginTop="0dp"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="10dp"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#86BB86FC"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingTop="15sp"
                    android:paddingBottom="0dp"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="23sp"
                    android:text="test"
                    android:background="@android:color/transparent"
                    android:paddingTop="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp"
                    android:layout_marginTop="0dp"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#86BB86FC"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:paddingTop="15sp"
                    android:paddingBottom="0dp"
                    android:text="@string/phone_number" />

                <EditText
                    android:id="@+id/phone_number_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="23sp"
                    android:text="@string/test"
                    android:background="@android:color/transparent"
                    android:paddingTop="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp"
                    android:layout_marginTop="0dp"
                    android:drawableStart="@drawable/ic_baseline_phone_24"
                    android:drawablePadding="10dp"
                    android:inputType="phone" />

            </LinearLayout>


            <Button
                android:id="@+id/edit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/edit"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </LinearLayout>


</ScrollView>